--- a/public/css/team.css
+++ b/public/css/team.css
@@ -329,12 +329,17 @@
 #partnerships {
   background:var(--yellow);
   position:relative;
-  display:grid;
-  padding:2em 2em 4em 2em;
-  grid-gap:70px;
-  grid-template-columns: repeat( auto-fit, minmax(350px, 1fr) );
+  display:flex;
+  flex-wrap:wrap;
+  padding:4em;
   justify-content:center;
   justify-items:center;
+}
+
+#partnerships .desc {
+  width:100%;
+  margin-bottom:2em;
+  text-align:center;
 }
 
 .partner-wrap {
@@ -342,6 +347,7 @@
   width:350px;
   height:350px;
   perspective: 500px;
+  margin:2em;
 }
 
 .partner {
